# openelections-data-pa

./: 20011106__pa__special__general.csv  20011106__pa__special__general__state_senate__17.csv  20020212__pa__special__general__state_house__149.csv  20030311__pa__special__general__state_senate__37.csv  20030318__pa__special__general__state_house__99.csv  20030617__pa__special__general__state_house.csv  20030617__pa__special__general__state_house__168.csv  20031104__pa__special__general__state_senate__27.csv  20040309__pa__special__general__state_house__152.csv  20050208__pa__special__general__state_house__189.csv  20050517__pa__special__general__state_senate.csv  20050517__pa__special__general__state_senate__42.csv  20060314__pa__special__general__state_house__174.csv  20060516__pa__special__general__state_senate__19.csv  20090519__pa__special__general__state_house__124.csv  20101102__pa__special__general__state_senate__45.csv  20110201__pa__special__general__state_house__185.csv  20120424__pa__special__general.csv  20120807__pa__special__general__state_senate__40.csv  20130521__pa__special__general.csv  CLAUDE.md  ELECTIONWARE_PARSER_GUIDE.md  ERStat_readme.txt  ERStat_readmep.txt  NATURAL_PDF_EVALUATION.md  OpenElections_v1.py  OpenElections_v2.py  README.md  changes.txt  column_types.csv  pyproject.toml  statewide_generator.py  utils.py
2000/: 20001107_pa_general_county.csv
2001/: 20010320__pa__special__general__state_senate.csv  20010626__pa__special__general__state_house__28.csv  20010814__pa__special__general__state_house__2.csv  20011106__pa__special__general.csv
(+894 files in other folders)
