[project]
name = "openelections-data-pa"
version = "0.1.0"
description = "OpenElections Data Pennsylvania - precinct-level election results"
requires-python = ">=3.9"
dependencies = [
    "clarify",
    "python-dateutil",
    "bs4",
    "requests",
    "pandas",
    "pdfplumber",
    "anthropic>=0.76.0",
    "llm>=0.27.1",
    "openpyxl>=3.1.5",
    "natural-pdf>=0.2.22",
]
